# op-orm

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: upload-to-pypi.yml
examples/: basic_functionality.py  database_credentials.py  example_models.py  server_inventory.py  service_accounts.py
op_orm/: client.py  deployment_generator.py  fields.py  models.py  types.py
op_orm/templates/: secret.yaml.j2
tests/: conftest.py  test_op_model.py
